[package]
name = "platter-walk"
version = "0.1.1"
authors = ["The 8472"]
description = "Directory tree traversal optimized for HDDs"
keywords = ["linux", "ext4"]
repository = "https://github.com/the8472/platter-walk"
readme = "README.md"
categories = ["filesystem"]
license = "MPL-2.0"

include = [
    "**/*.rs",
    "README.md",
    "LICENCE",
    "Cargo.toml",
]


[dependencies]
btrfs = { git = "https://github.com/the8472/rust-btrfs.git", branch = "fix-ioctl-dep" }
